fix: correct stylesheet path and adjust header styles for better alignment

--- a/1 - lp1/src/css/style.css
+++ b/1 - lp1/src/css/style.css
@@ -27,10 +27,10 @@ a {
 #header {
   background-color: white;
   justify-content: center;
-  align-items: center;
+  align-items: flex-end;
   color: black;
   width: 100%;
-  height: 4rem;
+  height: 3.3rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
   /* position: fixed; */
@@ -40,18 +40,18 @@ a {
 #logo-p {
   align-items: center;
   justify-content: center;
-  font-size: 20px;
+  font-size: 15px;
   margin: auto;
-  padding: 0 0 0 1rem;
+  padding: 0 0 0 1.3rem;
   text-shadow: 5px 1px 3px rgba(0, 0, 0, 0.1);
 }
- 
+
 
 #botao-logo {
   text-align: center;
-  font-size: 14px;
-  width: 5.4rem;
-  height: 3rem;
+  font-size: 12px;
+  width: 4.1rem;
+  height: 2.5rem;
   margin: auto;
   border: none;
   border-radius: 5px;
@@ -66,7 +66,7 @@ a {
   text-align: center;
   justify-content: center;
   align-items: center;
-  height: 42rem;
+  height: 30.7rem;
   width: 100%;
   background-color: #586c8a;
   color: white;
@@ -74,15 +74,14 @@ a {
 }
 
 #cad-email1 {
-  padding: 7rem 0 0 0;
-  align-items: center;
-  justify-content: center;
+  padding: 0 0 4.2rem;
+  text-align: center;
 }
 
-#cad-email1 > h1 {
-  text-align: center;
-  font-size: 2.8rem;
-  margin: 20px 0 12px 0;
+#cad-email1>h1 {
+
+  font-size: 2.1rem;
+  margin: 2.5rem 0 2.5rem 0;
   padding: 0 0 0 4px;
   color: white;
   line-height: 1.3;
@@ -91,8 +90,9 @@ a {
 }
 
 #email1 {
-  padding: 24px;
-  width: 32rem;
+  padding: 1rem 0;
+  text-align: center;
+  width: 25rem;
   margin-top: 2.5rem;
   margin-bottom: 5rem;
   margin: auto;
@@ -106,8 +106,8 @@ a {
   text-align: center;
   font-size: 1.2rem;
   margin: auto;
-  gap: 0.5rem;
-  padding: 25px;
+  gap: 0.8rem;
+  padding: 1rem;
   border-radius: 5px;
   border: none;
   background-color: #0d6efd;
@@ -121,8 +121,8 @@ a {
 
 #main1 {
   display: flex;
-  justify-content: center; 
-  align-items: center; 
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 28rem;
   border: 1px solid rgba(0, 0, 0, 0.2);
@@ -130,7 +130,7 @@ a {
 }
 
 
-#main1 > #stacks {
+#main1>#stacks {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
@@ -140,26 +140,23 @@ a {
   gap: 1rem;
 }
 
-
-
-#stacks1,#stacks2,#stacks3 > h1 {
+.stack-card> p, h {
   text-align: center;
+  margin: 20px 0 12px 0;
+  color: #586c8a;
+  line-height: 1.3;
+}
+
+.stack-card>h1 {
   font-size: 2.5rem;
-  margin: 20px 0 12px 0;
-  padding: 0 0 0 4px;
-  color: #586c8a;
-  line-height: 1.3;
-}
-#stacks1,#stacks2,#stacks3 > p {
-  text-align: center;
-  font-size: 1.2rem;
-  margin: 20px 0 12px 0;
-  padding: 0 0 0 4px;
-  color: #586c8a;
-  line-height: 1.3;
 }
 
-.stack-card{
+.stack-card>p {
+  font-size: 1.2rem;
+  padding: 0 0 0 4px;
+}
+
+.stack-card {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -168,13 +165,4 @@ a {
   height: 100%;
 }
 
-
-/* Classe reaproveitada */
-/* .w-33 {
-  width: 25%;
-  margin: 8%;
-} */
-
-.w-50 {
-  width: 50%;
-}
+ 
